# temat-16-analiza-i-wizualizacja-neuronow

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
docs/: QUICKSTART.md  mechanistic_methods.md
models/: simple_cnn.pth  sparse_mlp.pth  standard_mlp.pth
src/: __init__.py  config.py  dataset.py  features.py  plots.py
src/data/: __init__.py  credit_score_data.py
src/interpretability/: __init__.py  ablation.py  circuits.py  hooks.py  patching.py  pruning.py
src/modeling/: __init__.py  architecture.py  predict.py  train.py
src/sae/: sparse_autoencoder.py  train.py
src/streamlit_tabs/: ablation.py  activations.py  circut_detection.py
streamlit/: app.py  credit_score_data.py  data_gen.py  model_utils.py
streamlit/pages/: 01_Credit_Experiments.py  02_Vision_Lab.py
