[project]
name = "neural-microscope"
version = "1.0.0"
description = "Mechanistic Interpretability Tool for Neural Network Analysis and Visualization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Neural Microscope Team"}
]
keywords = ["mechanistic-interpretability", "neural-networks", "pytorch", "visualization", "bias-detection"]

dependencies = [
    # Core ML
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    # Data processing
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    # Visualization
    "matplotlib>=3.8.0",
    "plotly>=5.0.0",
    # Dashboard
    "streamlit>=1.30.0",
    # Utilities
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "python-dotenv>=0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
